@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-16T00:50:55Z",
-  "count_outdated" : 1024,
-  "uniques_outdated" : 630,
-  "count" : 1036,
-  "uniques" : 642,
+  "timestamp" : "2025-09-17T00:50:58Z",
+  "count_outdated" : 1025,
+  "uniques_outdated" : 631,
+  "count" : 1038,
+  "uniques" : 644,
   "clones" : [
-    {
-      "timestamp": "2025-09-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-04T00:00:00Z",
       "count": 1,
@@ -112,6 +103,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-16T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
